--- a/Sekretariat/dokumentasi.html
+++ b/Sekretariat/dokumentasi.html
@@ -5,13 +5,12 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Table Kurikulum SAP / Silabus</title>
+  <title>Sekretariat</title>
   <!-- plugins:css -->
   <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
   <!-- endinject -->
   <!-- Plugin css for this page -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- End plugin css for this page -->
   <!-- inject:css -->
   <!-- endinject -->
@@ -22,32 +21,7 @@
 </head>
 
 <body>
-  <!-- <div class="notifikasi">
-    <p>Welcome Back, Vicky Fahreza as Admin</p>
-    <span class="notif_proses"></span>
-  </div> -->
   <div class="container-scroller">
-    <!-- <div class="row p-0 m-0 proBanner" id="proBanner">
-      <div class="col-md-12 p-0 m-0">
-        <div class="card-body card-body-padding d-flex align-items-center justify-content-between">
-          <div class="ps-lg-1">
-            <div class="d-flex align-items-center justify-content-between">
-              <p class="mb-0 font-weight-medium me-3 buy-now-text">Free 24/7 customer support, updates, and more with
-                this template!</p>
-              <a href="https://www.bootstrapdash.com/product/purple-bootstrap-admin-template/?utm_source=organic&utm_medium=banner&utm_campaign=buynow_demo"
-                target="_blank" class="btn me-2 buy-now-btn border-0">Get Pro</a>
-            </div>
-          </div>
-          <div class="d-flex align-items-center justify-content-between">
-            <a href="https://www.bootstrapdash.com/product/purple-bootstrap-admin-template/"><i
-                class="mdi mdi-home me-3 text-white"></i></a>
-            <button id="bannerClose" class="btn border-0 p-0">
-              <i class="mdi mdi-close text-white me-0"></i>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div> -->
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
@@ -116,6 +90,7 @@
               <h6 class="p-3 mb-0 text-center">See all notifications</h6>
             </div>
           </li>
+
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown"
               aria-expanded="false">
@@ -156,7 +131,7 @@
               </div>
               <div class="nav-profile-text d-flex flex-column">
                 <span class="font-weight-bold mb-2">Vicky Fahreza</span>
-                <span class="text-secondary text-small">User</span>
+                <span class="text-secondary text-small">Sekretariat</span>
               </div>
               <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
             </a>
@@ -165,7 +140,6 @@
             <a class="nav-link" href="index.html">
               <i class="fas fa-home"></i>
               <span class="menu-title">Dashboard</span>
-
             </a>
           </li>
           <li class="nav-item">
@@ -245,190 +219,138 @@
               <span class="menu-title">Dokumentasi</span>
             </a>
           </li>
+
         </ul>
       </nav>
       <!-- partial -->
       <div class="main-panel">
         <div class="content-wrapper">
-          <!-- <div class="page-header flex-wrap">
-            <h3 class="mb-0"> Hi, welcome back Vicky!</h3>
-          </div> -->
           <div class="page-header">
             <h3 class="page-title">
               <span class="page-title-icon bg-gradient-primary text-white me-2">
-                <i class="fas fa-chart-bar"></i>
-              </span> Result Modul Mata Kuliah
+                <i class="fas fa-book"></i>
+              </span> Dokumentasi
             </h3>
-          </div>
-
-          <div class="row">
-            <div class="col-12 grid-margin">
-              <div class="card">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-md-12 pt-2">
-                      <div class="form-group has-search">
-                        <span class="fas fa-search form-control-feedback"></span>
-                        <input type="text" class="form-control" placeholder="Search">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row justify-content-between">
-                    <div class="col-md-4 pt-2">
-                      <select id="inputState" class="form-select">
-                        <option selected>Periode</option>
-                        <option>2020</option>
-                        <option>2021</option>
-                        <option>2022</option>
-                        <option>2023</option>
-                        <option>2024</option>
-                        <option>2025</option>
-                      </select>
-                    </div>
-                    <div class="col-md-4 pt-2">
-                      <select id="inputState" class="form-select">
-                        <option selected>Satuan Kerja</option>
-                        <option>2020</option>
-                        <option>2021</option>
-                        <option>2022</option>
-                        <option>2023</option>
-                        <option>2024</option>
-                        <option>2025</option>
-                      </select>
-                    </div>
-                    <div class="col-md-4 pt-1">
-                      <button type="button" class="btn btn-danger">Search</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
 
           <div class="row">
             <div class="col-12 grid-margin">
               <div class="card card-download">
                 <div class="card-body">
-                  <!-- <h4 class="card-title fs-3">Recent Tickets</h4> -->
+                  <!-- <div class="row justify-content-between">
+                    <div class="col-md-6 pt-1">
+                      <h4 class="card-title fs-3">User Activity</h4>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                      <select id="inputState" class="form-select">
+                        <option selected>Status</option>
+                        <option>Done</option>
+                        <option>Reject</option>
+                        <option>Progress</option>
+                      </select>
+                    </div>
+                  </div> -->
                   <div class="table-responsive">
                     <table class="table text-center">
                       <thead>
                         <tr>
                           <th>No.</th>
-                          <th>Nama Modul</th>
-                          <th>Kerjasama</th>
-                          <th>Program Studi</th>
+                          <th>Satuan Kerja</th>
+                          <th>Judul Dokumentasi</th>
+                          <th>Pers ( Gdrive )</th>
+                          <th>Foto ( Gdrive )</th>
+                          <th>Files ( Gdrive )</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
-                          <td>1</td>
+                          <td>1.</td>
                           <td>
-                            David Grey
+                            Masih Bekerja
                           </td>
-                          <td> Fund is not recieved </td>
-                          <td>Distribusi & Transportasi</td>
+                          <td> Kerja Rodi </td>
+                          <td>Alfamart </td>
+                          <td>Akuntansi</td>
+                          <td>2 Bulan</td>
+                          <td>
+                            <label class="badge badge-gradient-success">DONE</label>
+                          </td>
                         </tr>
 
                         <tr>
-                          <td>2</td>
+                          <td>2.</td>
                           <td>
-                            Stella Johnson
+                            Masih Bekerja
                           </td>
-                          <td> High loading time </td>
-                          <td>Distribusi & Transportasi</td>
+                          <td> Kerja Rodi </td>
+                          <td>Alfamart </td>
+                          <td>Akuntansi</td>
+                          <td>2 Bulan</td>
+                          <td>
+                            <label class="badge badge-gradient-success">DONE</label>
+                          </td>
                         </tr>
 
                         <tr>
-                          <td>3</td>
+                          <td>3.</td>
                           <td>
-                            Marina Michel
+                            Masih Bekerja
                           </td>
-                          <td> Website down for one week </td>
-                          <td>Distribusi & Transportasi</td>
+                          <td> Kerja Rodi </td>
+                          <td>Alfamart </td>
+                          <td>Akuntansi</td>
+                          <td>2 Bulan</td>
+                          <td>
+                            <label class="badge badge-gradient-success">DONE</label>
+                          </td>
                         </tr>
 
                         <tr>
-                          <td>4</td>
+                          <td>4.</td>
                           <td>
-                            John Doe
+                            Masih Bekerja
                           </td>
-                          <td> Loosing control on server </td>
-                          <td>Distribusi & Transportasi</td>
+                          <td> Kerja Rodi </td>
+                          <td>Alfamart </td>
+                          <td>Akuntansi</td>
+                          <td>2 Bulan</td>
+                          <td>
+                            <label class="badge badge-gradient-success">DONE</label>
+                          </td>
                         </tr>
 
                         <tr>
-                          <td>5</td>
+                          <td>5.</td>
                           <td>
-                            John Doe
+                            Masih Bekerja
                           </td>
-                          <td> Loosing control on server </td>
-                          <td>Distribusi & Transportasi</td>
-                        </tr>
-
-                        <tr>
-                          <td>6</td>
+                          <td> Kerja Rodi </td>
+                          <td>Alfamart </td>
+                          <td>Akuntansi</td>
+                          <td>2 Bulan</td>
                           <td>
-                            John Doe
+                            <label class="badge badge-gradient-success">DONE</label>
                           </td>
-                          <td> Loosing control on server </td>
-                          <td>Distribusi & Transportasi</td>
-                        </tr>
-
-                        <tr>
-                          <td>7</td>
-                          <td>
-                            John Doe
-                          </td>
-                          <td> Loosing control on server </td>
-                          <td>Distribusi & Transportasi</td>
-                        </tr>
-
-                        <tr>
-                          <td>8</td>
-                          <td>
-                            John Doe
-                          </td>
-                          <td> Loosing control on server </td>
-                          <td>Distribusi & Transportasi</td>
-                        </tr>
-
-                        <tr>
-                          <td>9</td>
-                          <td>
-                            John Doe
-                          </td>
-                          <td> Loosing control on server </td>
-                          <td>Distribusi & Transportasi</td>
-                        </tr>
-
-                        <tr>
-                          <td>10</td>
-                          <td>
-                            John Doe
-                          </td>
-                          <td> Loosing control on server </td>
-                          <td>Distribusi & Transportasi</td>
                         </tr>
                       </tbody>
                     </table>
-                  </div>
-                  <div class="pagination pt-4 justify-content-center">
-                    <nav aria-label="...">
-                      <ul class="pagination">
-                        <li class="page-item disabled">
-                          <a class="page-link">Previous</a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item active" aria-current="page">
-                          <a class="page-link" href="#">2</a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                          <a class="page-link" href="#">Next</a>
-                        </li>
-                      </ul>
-                    </nav>
+                    <div class="pagination pt-4 justify-content-center">
+                      <nav aria-label="...">
+                        <ul class="pagination">
+                          <li class="page-item disabled">
+                            <a class="page-link">Previous</a>
+                          </li>
+                          <li class="page-item"><a class="page-link" href="#">1</a></li>
+                          <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="#">2</a>
+                          </li>
+                          <li class="page-item"><a class="page-link" href="#">3</a></li>
+                          <li class="page-item">
+                            <a class="page-link" href="#">Next</a>
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -465,39 +387,12 @@
   <!-- endinject -->
   <!-- Custom js for this page -->
   <script src="assets/js/dashboard.js"></script>
-  <script src="assets/js/dashboard2.js"></script>
   <script src="assets/js/todolist.js"></script>
   <script src="assets/js/chart.js"></script>
   <!-- End custom js for this page -->
 
-  <!-- main -->
-  <script src="assets/js/main.js"></script>
-
   <!-- FONTAWESOME -->
   <script src="https://kit.fontawesome.com/7f2ed2a5ac.js" crossorigin="anonymous"></script>
-
-  <script>
-    const ctx = document.getElementById('myChart');
-
-    new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-        datasets: [{
-          label: '# of Votes',
-          data: [12, 19, 3, 5, 2, 3],
-          borderWidth: 1
-        }]
-      },
-      options: {
-        scales: {
-          y: {
-            beginAtZero: true
-          }
-        }
-      }
-    });
-  </script>
 </body>
 
 </html>
