--- a/Sekretariat/index.html
+++ b/Sekretariat/index.html
@@ -143,6 +143,18 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="proposal.html">
+              <i class="fas fa-envelope"></i>
+              <span class="menu-title">Proposal Pengajuan</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kerjaSama.html">
+              <i class="fas fa-user-friends"></i>
+              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#download" aria-expanded="false"
               aria-controls="ui-basic">
               <i class="fas fa-file-download"></i>
@@ -201,6 +213,12 @@
               </ul>
             </div>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dokumentasi.html">
+              <i class="fas fa-book"></i>
+              <span class="menu-title">Dokumentasi</span>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- partial -->
@@ -224,7 +242,7 @@
                   <div class="clearfix">
                     <div class="row justify-content-between">
                       <div class="col-md-6 pt-1">
-                        <h4 class="card-title float-left">Trend Report</h4>
+                        <h4 class="card-title float-left">Report Mahasiswa</h4>
                       </div>
                       <div class="col-md-4 mb-3">
                         <select id="inputState" class="form-select">
@@ -273,14 +291,14 @@
                     </div>
                   </div>
                   <div class="table-responsive">
-                    <table class="table">
+                    <table class="table text-center">
                       <thead>
                         <tr>
-                          <th>No. </th>
-                          <th> Nama </th>
-                          <th> Subject </th>
-                          <th> Last Update </th>
-                          <th> Status </th>
+                          <th>No.</th>
+                          <th>Nama</th>
+                          <th>Subject</th>
+                          <th>Last Update</th>
+                          <th>Status</th>
                         </tr>
                       </thead>
                       <tbody>
