--- a/Sekretariat/downloadSilabus.html
+++ b/Sekretariat/downloadSilabus.html
@@ -169,6 +169,18 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="proposal.html">
+              <i class="fas fa-envelope"></i>
+              <span class="menu-title">Proposal Pengajuan</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kerjaSama.html">
+              <i class="fas fa-user-friends"></i>
+              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#download" aria-expanded="false"
               aria-controls="ui-basic">
               <i class="fas fa-file-download"></i>
@@ -229,6 +241,12 @@
               </ul>
             </div>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dokumentasi.html">
+              <i class="fas fa-book"></i>
+              <span class="menu-title">Dokumentasi</span>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- partial -->
@@ -270,13 +288,13 @@
                   </div>
                   <!-- <h4 class="card-title fs-3">Recent Tickets</h4> -->
                   <div class="table-responsive">
-                    <table class="table">
+                    <table class="table text-center">
                       <thead>
                         <tr>
                           <th>No.</th>
-                          <th> Nama </th>
-                          <th> Satuan Kerja </th>
-                          <th> Action </th>
+                          <th>Nama</th>
+                          <th>Satuan Kerja</th>
+                          <th>Action</th>
                         </tr>
                       </thead>
                       <tbody>
