--- a/Sekretariat/resultLulus.html
+++ b/Sekretariat/resultLulus.html
@@ -168,7 +168,18 @@
 
             </a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="proposal.html">
+              <i class="fas fa-envelope"></i>
+              <span class="menu-title">Proposal Pengajuan</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kerjaSama.html">
+              <i class="fas fa-user-friends"></i>
+              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+            </a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#download" aria-expanded="false"
               aria-controls="ui-basic">
@@ -227,6 +238,12 @@
                 </li>
               </ul>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dokumentasi.html">
+              <i class="fas fa-book"></i>
+              <span class="menu-title">Dokumentasi</span>
+            </a>
           </li>
         </ul>
       </nav>
@@ -294,20 +311,32 @@
                 <div class="card-body">
                   <!-- <h4 class="card-title fs-3">Recent Tickets</h4> -->
                   <div class="table-responsive">
-                    <table class="table">
+                    <table class="table text-center">
                       <thead>
                         <tr>
                           <th>No.</th>
-                          <th> NIM </th>
-                          <th> Nama Mahasiswa </th>
-                          <th> Priode Pengajaran </th>
-                          <th> Lokasi Pengajaran </th>
-                          <th> Tangaal Lulus </th>
-                          <th> Program Studi </th>
-                          <th> Unit Pendidikan </th>
-                          <th> Lokasi Penempatan </th>
-                          <th> IPK </th>
-                          <th> Status </th>
+                          <th>Nama</th>
+                          <th>NIM</th>
+                          <th>Jenis Kelamin</th>
+                          <th>Program Studi</th>
+                          <th>Jenjang Pendidikan</th>
+                          <th>Mulai - Akhir Perkuliahan</th>
+                          <th>Tahun Masuk</th>
+                          <th>Bulan Masuk</th>
+                          <th>Kemitraan</th>
+                          <th>Priode Pendidikan</th>
+                          <th>Lokasi Pendidikan</th>
+                          <th>Sumber Dana</th>
+                          <th>Tahun Lulus</th>
+                          <th>Bulan Lulus</th>
+                          <th>Tanggal Yudisium</th>
+                          <th>Tanggal Wisuda</th>
+                          <th>Unit Pendidikan</th>
+                          <th>Keterangan</th>
+                          <th>Anggaran</th>
+                          <th>Penempatan Kerja</th>
+                          <th>IPK</th>
+                          <th>Status</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -323,6 +352,18 @@
                           <td>Computer Science</td>
                           <td>S1</td>
                           <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -342,6 +383,18 @@
                           <td>S1</td>
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
                           </td>
@@ -359,6 +412,18 @@
                           <td>Computer Science</td>
                           <td>S1</td>
                           <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -378,6 +443,18 @@
                           <td>S1</td>
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
                           </td>
@@ -395,6 +472,18 @@
                           <td>Computer Science</td>
                           <td>S1</td>
                           <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -414,6 +503,18 @@
                           <td>S1</td>
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
                           </td>
@@ -431,6 +532,18 @@
                           <td>Computer Science</td>
                           <td>S1</td>
                           <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -450,6 +563,18 @@
                           <td>S1</td>
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
                           </td>
@@ -468,6 +593,18 @@
                           <td>S1</td>
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
                           </td>
@@ -485,6 +622,18 @@
                           <td>Computer Science</td>
                           <td>S1</td>
                           <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
