--- a/Sekretariat/resultPendaftar.html
+++ b/Sekretariat/resultPendaftar.html
@@ -168,7 +168,18 @@
 
             </a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="proposal.html">
+              <i class="fas fa-envelope"></i>
+              <span class="menu-title">Proposal Pengajuan</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kerjaSama.html">
+              <i class="fas fa-user-friends"></i>
+              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+            </a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#download" aria-expanded="false"
               aria-controls="ui-basic">
@@ -227,6 +238,12 @@
                 </li>
               </ul>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dokumentasi.html">
+              <i class="fas fa-book"></i>
+              <span class="menu-title">Dokumentasi</span>
+            </a>
           </li>
         </ul>
       </nav>
@@ -294,26 +311,26 @@
                 <div class="card-body">
                   <!-- <h4 class="card-title fs-3">Recent Tickets</h4> -->
                   <div class="table-responsive">
-                    <table class="table">
+                    <table class="table text-center">
                       <thead>
                         <tr>
                           <th>No.</th>
-                          <th> NIK </th>
-                          <th> Nama Pendaftar </th>
-                          <th> Program Studi </th>
-                          <th> Tempat Lahir </th>
-                          <th> Tanggal Lahir </th>
-                          <th> Jenis Kelamin </th>
-                          <th> Kewarganegaraan </th>
-                          <th> Agama </th>
-                          <th> Gol Darah </th>
-                          <th> Alamat </th>
-                          <th> Kelurahan </th>
-                          <th> Kecamatan </th>
-                          <th> No Hp </th>
-                          <th> Nama Sekolah </th>
-                          <th> Alamat Sekolah </th>
-                          <th> Prestasi </th>
+                          <th>NIK</th>
+                          <th>Nama Pendaftar</th>
+                          <th>Program Studi</th>
+                          <th>Tempat Lahir</th>
+                          <th>Tanggal Lahir</th>
+                          <th>Jenis Kelamin</th>
+                          <th>Kewarganegaraan</th>
+                          <th>Agama</th>
+                          <th>Gol Darah</th>
+                          <th>Alamat</th>
+                          <th>Kelurahan</th>
+                          <th>Kecamatan</th>
+                          <th>No Hp</th>
+                          <th>Nama Sekolah</th>
+                          <th>Alamat Sekolah</th>
+                          <th>Prestasi</th>
                         </tr>
                       </thead>
                       <tbody>
