second commit user

--- a/User/docLulus.html
+++ b/User/docLulus.html
@@ -168,6 +168,18 @@
 
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="proposal.html">
+              <i class="fas fa-envelope"></i>
+              <span class="menu-title">Proposal Pengajuan</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kerjaSama.html">
+              <i class="fas fa-user-friends"></i>
+              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+            </a>
+          </li>
 
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#table" aria-expanded="false" aria-controls="ui-basic">
@@ -197,6 +209,12 @@
                 </li>
               </ul>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dokumentasi.html">
+              <i class="fas fa-book"></i>
+              <span class="menu-title">Dokumentasi</span>
+            </a>
           </li>
         </ul>
       </nav>
@@ -253,20 +271,32 @@
                 <div class="card-body">
                   <!-- <h4 class="card-title fs-3">Recent Tickets</h4> -->
                   <div class="table-responsive">
-                    <table class="table">
+                    <table class="table text-center">
                       <thead>
                         <tr>
                           <th>No.</th>
-                          <th> NIM </th>
-                          <th> Nama Mahasiswa </th>
-                          <th> Priode Pengajaran </th>
-                          <th> Lokasi Pengajaran </th>
-                          <th> Tangaal Lulus </th>
-                          <th> Program Studi </th>
-                          <th> Unit Pendidikan </th>
-                          <th> Lokasi Penempatan </th>
-                          <th> IPK </th>
-                          <th> Status </th>
+                          <th>Nama</th>
+                          <th>NIM</th>
+                          <th>Jenis Kelamin</th>
+                          <th>Program Studi</th>
+                          <th>Jenjang Pendidikan</th>
+                          <th>Mulai - Akhir Perkuliahan</th>
+                          <th>Tahun Masuk</th>
+                          <th>Bulan Masuk</th>
+                          <th>Kemitraan</th>
+                          <th>Priode Pendidikan</th>
+                          <th>Lokasi Pendidikan</th>
+                          <th>Sumber Dana</th>
+                          <th>Tahun Lulus</th>
+                          <th>Bulan Lulus</th>
+                          <th>Tanggal Yudisium</th>
+                          <th>Tanggal Wisuda</th>
+                          <th>Unit Pendidikan</th>
+                          <th>Keterangan</th>
+                          <th>Anggaran</th>
+                          <th>Penempatan Kerja</th>
+                          <th>IPK</th>
+                          <th>Status</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -282,6 +312,18 @@
                           <td>Computer Science</td>
                           <td>S1</td>
                           <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
@@ -301,6 +343,18 @@
                           <td>S1</td>
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
                           </td>
@@ -319,6 +373,18 @@
                           <td>S1</td>
                           <td>Jakarta Barat</td>
                           <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
                           </td>
@@ -336,6 +402,18 @@
                           <td>Computer Science</td>
                           <td>S1</td>
                           <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>2023</td>
+                          <td>Jakarta</td>
+                          <td>2023</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
+                          <td>Computer Science</td>
+                          <td>S1</td>
+                          <td>Jakarta Barat</td>
+                          <td>3.00</td>
                           <td>3.00</td>
                           <td>
                             <label class="badge badge-gradient-danger">Lulus</label>
