--- a/User/index.html
+++ b/User/index.html
@@ -142,6 +142,18 @@
               <span class="menu-title">Home</span>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="proposal.html">
+              <i class="fas fa-envelope"></i>
+              <span class="menu-title">Proposal Pengajuan</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kerjaSama.html">
+              <i class="fas fa-user-friends"></i>
+              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+            </a>
+          </li>
 
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#table" aria-expanded="false" aria-controls="ui-basic">
@@ -171,6 +183,12 @@
                 </li>
               </ul>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dokumentasi.html">
+              <i class="fas fa-book"></i>
+              <span class="menu-title">Dokumentasi</span>
+            </a>
           </li>
         </ul>
       </nav>
@@ -238,6 +256,11 @@
                           <option>Mei</option>
                           <option>Juni</option>
                         </select>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
                       </div>
                     </div>
                     <div class="main-wrapper">
