--- a/User/docAktif.html
+++ b/User/docAktif.html
@@ -168,6 +168,18 @@
 
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="proposal.html">
+              <i class="fas fa-envelope"></i>
+              <span class="menu-title">Proposal Pengajuan</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kerjaSama.html">
+              <i class="fas fa-user-friends"></i>
+              <span class="menu-title">Kerja Sama ( Upload Mou )</span>
+            </a>
+          </li>
 
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#table" aria-expanded="false" aria-controls="ui-basic">
@@ -197,6 +209,12 @@
                 </li>
               </ul>
             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dokumentasi.html">
+              <i class="fas fa-book"></i>
+              <span class="menu-title">Dokumentasi</span>
+            </a>
           </li>
         </ul>
       </nav>
@@ -253,21 +271,22 @@
                 <div class="card-body">
                   <!-- <h4 class="card-title fs-3">Recent Tickets</h4> -->
                   <div class="table-responsive">
-                    <table class="table">
+                    <table class="table text-center">
                       <thead>
                         <tr>
                           <th>No.</th>
-                          <th> NIM </th>
-                          <th> Nama Mahasiswa </th>
-                          <th> Jenjang </th>
-                          <th> Program Studi </th>
-                          <th> Status </th>
-                          <th> Angkatan </th>
-                          <th> IPK </th>
-                          <th> Alamat </th>
-                          <th> Kelurahan </th>
-                          <th> Kecamatan </th>
-                          <th> No Hp </th>
+                          <th>NIM</th>
+                          <th>Nama Mahasiswa</th>
+                          <th>Jenjang</th>
+                          <th>Program Studi</th>
+                          <th>Mulai - Akhir Perkuliahan</th>
+                          <th>Status</th>
+                          <th>Angkatan</th>
+                          <th>IPK</th>
+                          <th>Alamat</th>
+                          <th>Kelurahan</th>
+                          <th>Kecamatan</th>
+                          <th>No Hp</th>
                         </tr>
                       </thead>
                       <tbody>
